--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@vue/composition-api": ">=1.0.0-rc.1"
   },
   "devDependencies": {
-    "vue": "3.0.0",
+    "vue": "^3.0.0",
     "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
